[package]
name = "field33-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.5"
async-graphql-axum = "5.0.5"
axum = { version = "0.6.4", features = ["http2", "macros", "ws"] }
clap = { version = "4.1.4", features = ["env", "derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
