[package]
name = "field33-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-graphql = "5.0.5"
async-graphql-axum = "5.0.5"
axum = { version = "0.6.4", features = ["http2", "macros", "ws"] }
bolt-client = { version = "0.11.0", features = ["tokio", "tokio-rustls", "tokio-stream"] }
bolt-proto = "0.12.0"
clap = { version = "4.1.4", features = ["env", "derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
